--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "lldb",
+            "name": "Debug-lldb",
             "type": "lldb",
             "request": "launch",
             "program": "build/exe/${config:BUILD_TARGET}.out",
